# starlette-jwt-authentication

./: .gitignore  pyproject.toml
src/starlette_swt_authentication/: app.py
tests/: conftest.py  test_auth.py
